# drf-imgproxy-demo

./: .dockerignore  Dockerfile  README.rst  docker-compose.yml  manage.py  pyproject.toml
demo/: admin.py  models.py  serializers.py  urls.py  views.py
demo/management/commands/: createbucket.py
demo/migrations/: 0001_initial.py
docker/: run-devel.sh  run.sh
drf_imgproxy_demo/: asgi.py  settings.py  urls.py  wsgi.py
